Added alert that this web is unused anymore

--- a/index.html
+++ b/index.html
@@ -71,11 +71,7 @@
           <a href="mailto:name@email.com">yehezkiel.gunawan28@gmail.com</a>
         </div>
         <p class="lead mb-5">
-          <i class="fas fa-angle-double-right"></i>Just an ordinary Informatics student at Multimedia Nusantara
-          University, Tangerang, Banten. <br>
-          <i class="fas fa-angle-double-right"></i>Learner, not talented<br>
-          <i class="fas fa-angle-double-right"></i>Not a genius person, just reading and googling skill. <br>
-          <i class="fas fa-angle-double-right"></i>Travelling and photography enthusiasm<br>
+          <i class="fas fa-angle-double-right"></i>CURRENTLY MOVED INTO OTHER DOMAIN <a href="https://yehezkielgunawan123.vercel.app"><b>Click Here</b></a> <br>
         </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/yehezkiel-gunawan-595128138">
@@ -92,196 +88,6 @@
     </section>
 
     <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
-      <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Laboratory Assistant</h3>
-            <div class="subheading mb-3">Universitas Multimedia Nusantara (UMN)</div>
-            <p>Research and teaching assistant. <br>
-              (Mobile Development Lab, Web Development, Database System, and Algorithm & Data Structure)</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">January 2018 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Junior Testing Engineer</h3>
-            <div class="subheading mb-3">PT. JULO Teknologi Finansial</div>
-            <p>Internship as QA Automation. Develop the automation script for regression testing.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2019 - September 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Literacy Coach</h3>
-            <div class="subheading mb-3">UMN Library</div>
-            <p>Teaching and mentoring new students about digital information literacy.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2017</span>
-          </div>
-        </div>
-
-      </div>
-
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
-      <div class="w-100">
-        <h2 class="mb-5">Education</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Multimedia Nusantara University (UMN)</h3>
-            <div class="subheading mb-3">Informatics Student</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2016 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Dicoding Academy</h3>
-            <div class="subheading mb-3">Indosat Bootcamp Scholarship (Front-End)</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">April 2020 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Budi Mulia High School Bogor</h3>
-            <div class="subheading mb-3">Science Major</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2013 - May 2016</span>
-          </div>
-        </div>
-
-      </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
-      <div class="w-100">
-        <h2 class="mb-5">Skills</h2>
-
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-php"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-laravel"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-python"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fas fa-database"></i>
-          </li>
-        </ul>
-
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul>
-      </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
-      <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web/mobile developer, I enjoy most of my time being outdoors. In holiday season, I like to
-          take a short vacation to some Instagramable place and take pictures there.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and action genre movies and animes, and I spend
-          a large amount of my free time exploring the latest technology advancements in Youtube</p>
-      </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="portofolio">
-      <div class="w-100">
-        <h2 class="mb-5">Portofolio</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fas fa-arrow-right"></i>
-            <a href="https://covid-19-yehezkiel.surge.sh/">
-              <h4>Covid-19 Statistics (Dicoding Project)</h4>
-            </a>
-          </li>
-          <li>
-            <i class="fa-li fa fas fa-arrow-right"></i>
-            <a href="https://github.com/yehezkielgunawan/My-Skripsi">
-              <h4>Thesis Project (Sentiment Analysis)</h4>
-            </a>
-          </li>
-          <li>
-            <i class="fa-li fa fas fa-arrow-right"></i>
-            <a href="http://angular-crud-sederhana.surge.sh/">
-              <h4>Angular and Firebase simple CRUD. </h4>
-            </a></li>
-          <li>
-            <i class="fa-li fa fas fa-arrow-right"></i>
-            <a href="https://github.com/yehezkielgunawan/Project_UAS_Ionic">
-              <h4>Simple Math Gamification for Kids</h4>
-            </a></li>
-          <li>
-            <i class="fa-li fa fas fa-arrow-right"></i>
-            <a href="https://github.com/yehezkielgunawan/lab-ionic-umn">
-              <h4>Ionic Weekly Submission</h4>
-            </a></li>
-          <li>
-            <i class="fa-li fa fas fa-arrow-right"></i>
-            <a href="https://github.com/yehezkielgunawan/PTI-FL-2019-ASLAB">
-              <h4>Laboratory Modules</h4>
-            </a></li>
-        </ul>
-      </div>
-    </section>
 
   </div>
 
